--- a/Лаба№3.ipynb
+++ b/Лаба№3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaa0Pn0KlZ5tM9wgocOI/l",
+      "authorship_tag": "ABX9TyNIf2DYNrdemVMRtDIBFL4/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,237 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/enelaill/My_First_Test_Repo/blob/main/%D0%9B%D0%B0%D0%B1%D0%B0%E2%84%963.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Скопированная таблица с сайта https://www.kommersant.ru/doc/2645543\n",
+        "df=pd.read_csv('energy.csv')\n",
+        "df = df.dropna()\n",
+        "df"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "id": "3snDvppd0TLe",
+        "outputId": "0f7ec9f4-e559-4df0-8dd2-a25bc9e0f9cc"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                   ТЭС              Владелец                Регион  \\\n",
+              "0    Сургутская ГРЭС-2           Э.Он Россия   Ханты-Мансийский АО   \n",
+              "1      Рефтинская ГРЭС           Энел Россия  Свердловская область   \n",
+              "2     Костромская ГРЭС             Интер РАО   Костромская область   \n",
+              "3    Сургутская ГРЭС-1  Газпромэнергохолдинг   Ханты-Мансийский АО   \n",
+              "4       Рязанская ГРЭС  Газпромэнергохолдинг     Рязанская область   \n",
+              "5       Киришская ГРЭС  Газпромэнергохолдинг  Ленинградскаяобласть   \n",
+              "6     Конаковская ГРЭС           Энел Россия      Тверская область   \n",
+              "7     Ириклинская ГРЭС             Интер РАО  Оренбургская область   \n",
+              "8        Пермская ГРЭС             Интер РАО         Пермский край   \n",
+              "9  Ставропольская ГРЭС  Газпромэнергохолдинг   Ставропольский край   \n",
+              "\n",
+              "   Мощность (ГВт)  \n",
+              "0             5.6  \n",
+              "1             3.8  \n",
+              "2             3.6  \n",
+              "3             3.3  \n",
+              "4             3.3  \n",
+              "5             2.6  \n",
+              "6             2.5  \n",
+              "7             2.4  \n",
+              "8             2.4  \n",
+              "9             2.4  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-358195a4-d097-443b-85b7-ade26383f7b5\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ТЭС</th>\n",
+              "      <th>Владелец</th>\n",
+              "      <th>Регион</th>\n",
+              "      <th>Мощность (ГВт)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Сургутская ГРЭС-2</td>\n",
+              "      <td>Э.Он Россия</td>\n",
+              "      <td>Ханты-Мансийский АО</td>\n",
+              "      <td>5.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Рефтинская ГРЭС</td>\n",
+              "      <td>Энел Россия</td>\n",
+              "      <td>Свердловская область</td>\n",
+              "      <td>3.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Костромская ГРЭС</td>\n",
+              "      <td>Интер РАО</td>\n",
+              "      <td>Костромская область</td>\n",
+              "      <td>3.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Сургутская ГРЭС-1</td>\n",
+              "      <td>Газпромэнергохолдинг</td>\n",
+              "      <td>Ханты-Мансийский АО</td>\n",
+              "      <td>3.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Рязанская ГРЭС</td>\n",
+              "      <td>Газпромэнергохолдинг</td>\n",
+              "      <td>Рязанская область</td>\n",
+              "      <td>3.3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Киришская ГРЭС</td>\n",
+              "      <td>Газпромэнергохолдинг</td>\n",
+              "      <td>Ленинградскаяобласть</td>\n",
+              "      <td>2.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Конаковская ГРЭС</td>\n",
+              "      <td>Энел Россия</td>\n",
+              "      <td>Тверская область</td>\n",
+              "      <td>2.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Ириклинская ГРЭС</td>\n",
+              "      <td>Интер РАО</td>\n",
+              "      <td>Оренбургская область</td>\n",
+              "      <td>2.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Пермская ГРЭС</td>\n",
+              "      <td>Интер РАО</td>\n",
+              "      <td>Пермский край</td>\n",
+              "      <td>2.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Ставропольская ГРЭС</td>\n",
+              "      <td>Газпромэнергохолдинг</td>\n",
+              "      <td>Ставропольский край</td>\n",
+              "      <td>2.4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-358195a4-d097-443b-85b7-ade26383f7b5')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-358195a4-d097-443b-85b7-ade26383f7b5 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-358195a4-d097-443b-85b7-ade26383f7b5');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
       ]
     },
     {
